bk_ida/gccida/g0/gen_subprogram_die
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/gen_subprogram_die/src/dwarf2out.c:10690:21: error: use of undeclared identifier 'debug_info_level_0'
if ( ( unsigned int)debug_info_level_0 > DINFO_LEVEL_TERSE ) 
                    ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/gen_subprogram_die/src/dwarf2out.c:10739:46: error: use of undeclared identifier 'off_76E313'
sprintf( label_id, "*.%s%u", ( const char *)&off_76E313, current_funcdef_number); 
                                             ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/gen_subprogram_die/src/dwarf2out.c:10754:21: error: use of undeclared identifier 'debug_info_level_0'
if ( ( unsigned int)debug_info_level_0 <= DINFO_LEVEL_TERSE ) 
                    ^
3 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/gen_subprogram_die/src/obj/dwarf2out.o] Error 1
